--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ input {
   left: 10px;
   background: rgba(255,255,255,0.9);
   border: 1px solid #333;
-  padding: 5px;
+  padding: 10px;
   border-radius: 6px;
   z-index: 10;
 }
@@ -333,14 +333,13 @@ input {
   top: 10px;
   right: 10px;
   background: rgba(255,255,255,0.9);
-  padding: 8px;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-  font-family: Arial, sans-serif;
+  border: 1px solid #333;
+  padding: 10px;
+  border-radius: 6px;
 }
 
 .layer-menu label {
-  display: block;
+  display: inline-flex;
   cursor: pointer;
   margin: 4px 0;
 }
